[package]
name = "layan_saya_abah"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "blocking"
path = "src/main.rs"

[[bin]]
name = "non_blocking"
path = "src/async_main.rs"

[dependencies]
epoll = "4.3.3"
